--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-  <div class="container">
-      <picture class="image-parfum">
-        <source srcset="./src/images/image-product-desktop.jpg" media="(min-width: 769px)">
-        <img src="./src/images/image-product-mobile.jpg" alt="Gabrielle Essence Eau De Parfum" >
-      </picture>
+  <main class="container" aria-label="main">
+    <picture class="image-parfum">
+      <source srcset="./src/images/image-product-desktop.jpg" media="(min-width: 769px)">
+      <img src="./src/images/image-product-mobile.jpg" alt="Gabrielle Essence Eau De Parfum">
+    </picture>
 
     <div class="info">
       <p class="type-product">Perfume</p>
@@ -43,14 +43,14 @@
 
       <a href="#" aria-label="add to cart" class="btn-add-to-cart">Add to Cart</a>
     </div>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution" aria-label="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="front-end-mentor">Frontend
       Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/michel-moreira" target="_blank"
       class="front-end-mentor">Michel Moreira</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
